# demoserver

./: .gitmodules  CMakeLists.txt  README.md
demoserver.xcodeproj/: project.pbxproj
demoserver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: DemoSecretMgr.cpp  DemoSecretMgr.hpp  ServerCmdValidators.hpp  ServerNouns.cpp  ServerNouns.hpp  main.cpp
tools/: demoserver.paw
tools/com.vmeng.PawExtensions.DemoServerSig/: DemoServerSig.js
